--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -32,7 +32,7 @@
 				</div>
 				<div class="navbar">
 					<ul class="menu">
-						<li><a href="1_works.html" class="works">works</a></li>
+						<li><a href="index.html" class="works">works</a></li>
 						<li><a href="2_about.html" class="about">about</a></li>
 						<li><a href="3_contact.html" class="contact">contact</a></li>
 					</ul>
