--- a/portfolio/kmooc.html
+++ b/portfolio/kmooc.html
@@ -25,7 +25,7 @@
 			</div>
 		</div>
 
-		<div class="button" OnClick="location.href ='1_works.html'"  style="cursor:pointer;">
+		<div class="button" OnClick="location.href ='index.html'"  style="cursor:pointer;">
 		</div>
 
 		<div class="contents">
